// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar.vue does not render dark mode classes 1`] = `
<header
  class="v-sheet theme--light v-toolbar v-toolbar--flat v-app-bar v-app-bar--fixed pa-sai white"
  style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
>
  <div
    class="v-toolbar__content"
    style="height: 64px;"
  >
    <a
      aria-current="page"
      class="text-decoration-none router-link-exact-active router-link-active"
      href="/"
    >
      <div
        class="white--text text-h5 d-flex align-center grey--text text--darken-4"
      >
        
      ChatApp
    
      </div>
    </a>
     
    <div
      class="spacer"
    />
     
    <div
      class="d-flex align-center"
    >
      <a
        class="text-decoration-none text--accent text--secondary"
        href="/auth/signin"
      >
        <div
          class="app-bar__btn text-center rounded pa-2 pl-2 pr-2"
          id="signin-btn"
        >
          
          Sign In
        
        </div>
      </a>
       
      <a
        class="text-decoration-none text--accent text--secondary"
        href="/auth/signup"
      >
        <div
          class="app-bar__btn text-center rounded pa-2 pl-2 pr-2"
          id="signup-btn"
        >
          
          Sign Up
        
        </div>
      </a>
       
      <hr
        aria-orientation="vertical"
        class="mx-2 my-auto v-divider v-divider--vertical theme--light"
        role="separator"
        style="height: 25px;"
      />
    </div>
     
    <div
      class="v-menu"
    >
      <!---->
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light elevation-0 v-size--default"
      id="settings-btn"
      role="button"
      style="font-size: 16px;"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate mdi mdi-cog-outline theme--light"
        />
      </span>
    </button>
  </div>
</header>
`;

exports[`AppBar.vue renders dark mode classes 1`] = `
<header
  class="v-sheet theme--light v-toolbar v-toolbar--flat v-app-bar v-app-bar--fixed pa-sai"
  style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
>
  <div
    class="v-toolbar__content"
    style="height: 64px;"
  >
    <a
      aria-current="page"
      class="text-decoration-none router-link-exact-active router-link-active"
      href="/"
    >
      <div
        class="white--text text-h5 d-flex align-center"
      >
        
      ChatApp
    
      </div>
    </a>
     
    <div
      class="spacer"
    />
     
    <div
      class="d-flex align-center"
    >
      <a
        class="text-decoration-none text--accent text--secondary"
        href="/auth/signin"
      >
        <div
          class="app-bar__btn text-center rounded pa-2 pl-2 pr-2"
          id="signin-btn"
        >
          
          Sign In
        
        </div>
      </a>
       
      <a
        class="text-decoration-none text--accent text--secondary"
        href="/auth/signup"
      >
        <div
          class="app-bar__btn text-center rounded pa-2 pl-2 pr-2"
          id="signup-btn"
        >
          
          Sign Up
        
        </div>
      </a>
       
      <hr
        aria-orientation="vertical"
        class="mx-2 my-auto v-divider v-divider--vertical theme--light"
        role="separator"
        style="height: 25px;"
      />
    </div>
     
    <div
      class="v-menu"
    >
      <!---->
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light elevation-0 v-size--default"
      id="settings-btn"
      role="button"
      style="font-size: 16px;"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate mdi mdi-cog-outline theme--light"
        />
      </span>
    </button>
  </div>
</header>
`;

exports[`AppBar.vue renders the logout button 1`] = `
<header
  class="v-sheet theme--light v-toolbar v-toolbar--flat v-app-bar v-app-bar--fixed pa-sai white"
  style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
>
  <div
    class="v-toolbar__content"
    style="height: 64px;"
  >
    <a
      aria-current="page"
      class="text-decoration-none router-link-exact-active router-link-active"
      href="/"
    >
      <div
        class="white--text text-h5 d-flex align-center grey--text text--darken-4"
      >
        
      ChatApp
    
      </div>
    </a>
     
    <div
      class="spacer"
    />
     
    <div
      class="d-flex align-center"
    >
      <div
        class="app-bar__btn text-center rounded pa-2 pl-2 pr-2"
        id="logout-btn"
      >
        
      Logout
    
      </div>
       
      <hr
        aria-orientation="vertical"
        class="mx-2 my-auto v-divider v-divider--vertical theme--light"
        role="separator"
        style="height: 25px;"
      />
    </div>
     
    <div
      class="v-menu"
    >
      <!---->
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light elevation-0 v-size--default"
      id="settings-btn"
      role="button"
      style="font-size: 16px;"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate mdi mdi-cog-outline theme--light"
        />
      </span>
    </button>
  </div>
</header>
`;
